@startuml

class Terminal {
- nom : str {key}
- longitude : float
- lattitude : float
}
note top of Terminal : {(longitude,latitude)key;-90<latitude<90;-180<longitude<180}

class Porte {
- num : int {local key,num>0}
}


class Avion {
- id : str {key}
}

class Compagnie {
- nom : str {key}
}

CompagnieFabrique--|>Compagnie
CompagnieVol--|>Compagnie

class CompagnieFabrique{

}


abstract class Model {
- nom : str {key}
- nombrePlaces : int {nombrePlaces>=0}
- vitesseMax : float {vitesseMax>0}
}

class Turbopropulseur{
- vitMaxRot : float {vitMaxRot>0}
}

class Turboreacteur{
- pousseeMax : float {pousseeMax>0}
}

abstract class Vol{
- id : str {key} 
}
note top of Vol : le vol et la porte associée doivent avoir le même modèle d'avion
note top of Vol : nombre de passagers est infèrieur ou égal au nombre de places du modèle de l'avion associé au vol


class VolDepart{
- destination : str
- heureDepart : datetime
- heureEmbarquement : datetime
}
note top of VolDepart : heureEmbarquement<heureDepart

class VolArrivee{
- provenance : str
- heureArrivee : datetime
}




abstract class Personne{
- nom : str
- prenom : str
- dateNaiss : date {datetime<currentDateTime}
- rue : str
- ville : str
- pays : str
}

abstract class Personnel{
- id_personnel : int {key}
- numeroTel : str {key}
}
note top of Personnel : {10<=length("numeroTel")<=12}
class Pilote{}
class Stewart{}
class HoteAccueil{}
class Technique{}


class Passager{
- numeroTel : str {NULLABLE}

}
note top of Passager : {10<=length("numeroTel")<=12, NULLABLE}



Avion"*"--"1"Model : est du modèle >
Personne<|--Personnel
note bottom of Personne :  "Héritage : OR"
Personne<|--Passager


Porte"1..*"--"1..*" Model : peut accueillir >
Model<|--Turbopropulseur
Model<|--Turboreacteur
Vol<|--VolArrivee
Vol<|----VolDepart
CompagnieVol"1"--"0..*"Vol : gère >
Personnel<|--Pilote
Personnel<|---Stewart
Personnel<|--HoteAccueil
Personnel<|---Technique
Terminal*--"1..*"Porte : se situe < 
Avion"1"--"1..*"Vol : réalise >
Model"*"--"1"CompagnieFabrique : fabrique <
Vol"*"--"2"Pilote : pilote <
Vol"*"--"2..*"Stewart : travaille <
VolDepart"*"--"2"HoteAccueil : accueille <
Terminal"1"--"1..*"Technique : entretient <
Vol"1..*"--"*"Passager : voyage <
(Vol,Passager).. Bagage
class Bagage{
- nombreBagage : int {nombreBagage>=0}
- poidsBagage : float {poidsBagage>=0}
}

Vol"*"--"1"Porte : relie >


@enduml
